@@ -55,9 +55,9 @@ is_deeply(
       'ibuf_inserts'              => '19817685',
       'ibuf_merged'               => '19817684',
       'ibuf_merges'               => '3552620',
-      'innodb_lsn'                => '540805326864',
+      'log_bytes_written'         => '540805326864',
       'unflushed_log'             => '0',
-      'flushed_to'                => '540805326864',
+      'log_bytes_flushed'         => '540805326864',
       'pending_log_writes'        => '0',
       'pending_chkp_writes'       => '0',
       'log_writes'                => '520835887',
@@ -115,9 +115,9 @@ is_deeply(
       'ibuf_inserts'              => '17549044',
       'ibuf_merged'               => '15956910',
       'ibuf_merges'               => '1676050',
-      'innodb_lsn'                => '13093949495856',
+      'log_bytes_written'         => '13093949495856',
       'unflushed_log'             => '1276529',
-      'flushed_to'                => '13093948219327',
+      'log_bytes_flushed'         => '13093948219327',
       'pending_log_writes'        => '1',
       'pending_chkp_writes'       => '2',
       'log_writes'                => '3430041',
@@ -187,9 +187,9 @@ is_deeply(
       'ibuf_inserts'              => '0',
       'ibuf_merged'               => '0',
       'ibuf_merges'               => '0',
-      'innodb_lsn'                => '103216',
+      'log_bytes_written'         => '103216',
       'unflushed_log'             => '0',
-      'flushed_to'                => '103216',
+      'log_bytes_flushed'         => '103216',
       'pending_log_writes'        => '0',
       'pending_chkp_writes'       => '0',
       'log_writes'                => '72',
@@ -252,8 +252,8 @@ is_deeply(
       'ibuf_merges'               => '94372',
       'hash_index_cells_total'    => '24902177',
       'hash_index_cells_used'     => '12151667',
-      'innodb_lsn'                => '541333186407',
-      'flushed_to'                => '541333186407',
+      'log_bytes_written'         => '541333186407',
+      'log_bytes_flushed'         => '541333186407',
       'last_checkpoint'           => '541046660013',
       'pending_log_writes'        => '0',
       'pending_chkp_writes'       => '0',
